# django-diagram

./: .pre-commit-config.yaml  .tflint.hcl  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: release-drafter.yml
.github/workflows/: pre-commit.yml
django_diagram/: __main__.py  app.py  mermaid.py
test/: test_app.py  test_mermaid.py
test/example_site/: manage.py
test/example_site/core/: models.py
test/example_site/core/migrations/: 0001_initial.py
test/example_site/example_site/: asgi.py  settings.py  urls.py  wsgi.py
test/example_site/inventory/: models.py
test/example_site/inventory/migrations/: 0001_initial.py
