[metadata]
name = django-diagram
version = 0.0.1
description = Generate an Entity Relationship Diagram for a Django project in Mermaid format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nick-solly/django-diagram.git
author = Nick Solly
author_email = nick@sudofox.co
license = All Rights Reserved
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Framework :: Django

[options]
include_package_data = true
packages = find:
install_requires =
    django >= 3.0
